# nano-vm-mcp

./: .env.example  .gitignore  CHANGELOG-1.md  CHANGELOG.md  README.md  pyproject.toml  readme_new.md
.github/workflows/: autofix.yml  ci.yml  publish.yml
.github\workflows/: ci.yml
nano_vm_mcp/: __init__.py  cli.py  handlers.py  server.py  store.py  tools.py
nano_vm_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_agent_debugger.py  test_auth.py  test_run_program_errors.py  test_sprint4_gateway.py  test_sprint4_idempotency.py  test_sprint4_trace_persistence.py  test_sprint_trace_logging.py  test_store.py  test_te_transition_stats.py  test_tools.py  test_v030_sprint3.py  test_v070_sprint2_gateway.py
