[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nano-vm-mcp"
dynamic = ["version"]
description = "MCP server for llm-nano-vm — run deterministic LLM programs via Model Context Protocol"
authors = [
    {name = "Ale007XD", email = "alex.deloverov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agent", "mcp", "deterministic", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "llm-nano-vm>=0.5.0",
    "mcp>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
nano-vm-mcp = "nano_vm_mcp.cli:main"

[project.urls]
Repository = "https://github.com/Ale007XD/nano-vm-mcp"
Homepage   = "https://github.com/Ale007XD/nano-vm-mcp"
Issues     = "https://github.com/Ale007XD/nano-vm-mcp/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["nano_vm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath   = ["."]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["nano_vm_mcp"]
